--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,77 @@
 body{
-    background-color: rgb(1, 17, 51);
-    color: white;
+    background-color: rgb(13, 52, 124);
+    color: rgb(255, 255, 255);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
+}
+#container{
+    width:800px;
+    margin: 20px auto;
+    background-color:5px double white;
+    border-right: 5px double white;
+    padding: 10px 60px;
+}
+h1{
+    background-color: rgb(#FFA500);
+    border: 3px solid black;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+h2{
+    font-size: 1.3em;
+    text-align: center;
+    font-style: italic;
+}
+h3{
+   border-left: 20px double #ffffff;
+   padding-left: 15px;
+   border-radius: 20px;
+   border-bottom: 2px solid rgb(219, 168, 96) ;
+   width: 150px;
+   background-color: rgb(219, 168, 96)
+
 }
 p{
     line-height: 1.75em;
-    color: white;
+    color: rgb(255, 255, 255);
+    width: 100%;
+    padding: 2px;
+    
+    
 }
 
 img{
     width: 300px;
     border-radius: 10px;
+    border: 5px solid rgb(219, 168, 96);
+    /*width: 100%*/
+    margin-right: 20px;
+    float:left;
+}
+a:link{
+    color:blueviolet;
+}
+a:visited{
+    color: rgb(172, 164, 164);
+}
+a:hover{
+    color: rgb(211, 42, 42)
+}
+a:active{
+    color:white;
+}
+#pic1{
+    float:right;
+    margin-left: 10px;
+    margin-right:0;
+}
+.highlight{
+    background-color:rgb(151, 202, 49);
+    color:black;
+    padding: 2px;
+    border-radius: 3px;
 
 }
-
