--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,12 @@ body{
     color: rgb(255, 255, 255);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: linear-gradient(to bottom right, blueviolet, rgb(72, 72, 200), rgb(132, 110, 230));
-    background-attachment: fixed;*/
+    background-attachment: fixed;
+    padding-left: 15px;
 }
 #container{
     width:1000px;
-    margin: 200px auto;
+    margin: 50px auto;
     background-color:5px double white;
     border-right: 5px double white;
     padding: 10px 50px;
@@ -16,7 +17,7 @@ h1{
     background-color: blueviolet;
     border: 3px solid black;
     border-radius: 10px;
-    padding: 30px;
+    padding: 50px;
     margin: 0 auto;
     text-align: center;
 }
@@ -58,7 +59,7 @@ img:hover {
     transition: all 0.5s ease-in-out;
 }
 a:link{
-    color:blueviolet;
+    color:rgb(191, 68, 40);
 }
 a:visited{
     color: rgb(172, 164, 164);
@@ -71,8 +72,9 @@ a:active{
 }
 #pic1{
     float:right;
-    margin-left: 10px;
+    margin-left: 100px;
     margin-right:0;
+    
 }
 .highlight{
     background-color:rgb(151, 202, 49);
@@ -109,22 +111,23 @@ a:active{
     }
 }
 
-@media (max-width:900px){
+/* ...existing code... */
+@media (max-width:992px){
     #container{
         /*background-color: rgb(13, 52, 124);*/
         width:100%;
     }
     body,p,#container{
-        margin:0;
+        margin: 0;
         border:none;
-        padding:0;
+        padding: 0;
     }
     p{
-        padding:20px;
+        padding:10px;
     }
-@media (max-width:600px){
+}  /* <-- added closing brace to end the 992px media query */
+@media (max-width:768px){
     #sidebar{
         display:none;
     }
-}
 }
